- Bug #46763 (mb_stristr() wrong output when needle does not exist) (patch by Henrique M. Decaria)